--- a/departure/src/pages/dashboard/dashboard.page.scss
+++ b/departure/src/pages/dashboard/dashboard.page.scss
@@ -3,11 +3,9 @@
 }
 
 #connections {
-  border: black 1px solid;
-  width: 50%;
+  width: 40%;
 }
 
 #search {
-  border: black 1px solid;
   width: 40%;
 }
